--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
           <hr>
           <img src="./img/battery.png" alt="">
           <p>Battery Capacity<br>3000mAh</p>
+          <hr>
+          <img src="./img/android.png" alt="">
+          <p>Operating System<br>Android 9.0<br>(upgradable to Android 12.0)</p>
         </div>
         <div class="model">
           <h2>Pixel 3a XL</h2>
@@ -82,6 +85,9 @@
           <hr>
           <img src="./img/battery.png" alt="">
           <p>Battery Capacity<br>3700mAh</p>
+          <hr>
+          <img src="./img/android.png" alt="">
+          <p>Operating System<br>Android 9.0<br>(upgradable to Android 12.0)</p>
         </div>
         <div class="model">
           <h2>Pixel 3</h2>
@@ -104,6 +110,9 @@
           <hr>
           <img src="./img/battery.png" alt="">
           <p>Battery Capacity<br>2915mAh</p>
+          <hr>
+          <img src="./img/android.png" alt="">
+          <p>Operating System<br>Android 9.0<br>(upgradable to Android 12.0)</p>
         </div>
         <div class="model">
           <h2>Pixel 3XL</h2>
@@ -126,6 +135,9 @@
           <hr>
           <img src="./img/battery.png" alt="">
           <p>Battery Capacity<br>3430mAh</p>
+          <hr>
+          <img src="./img/android.png" alt="">
+          <p>Operating System<br>Android 9.0<br>(upgradable to Android 12.0)</p>
         </div>
       </div>
     </main>
