--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
         <img id="overview-img" src="./img/overview.jpg" alt="pixel 3XL">
       </div>
       <div id="overview-video">
-        <iframe src="https://www.youtube.com/embed/aY0oLfhnV-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="video" src="https://www.youtube.com/embed/aY0oLfhnV-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div id="colors">
         <img id="colors-img" src="./img/colors.png" alt="pixel 3XL">
         <p>Fresh new colors.</p>
         </div>
       <div id="features">
-        <!-- to be completed -->
       </div>
+        <img id="features-img" src="./img/pixel 3 rear.jpg" alt="pixel 3 rear camera">
+      
       <div id="pricing">
         <div class="model">
           <h2>Pixel 3a</h2>
+          <p>From <b>$399</b></p>
           <img id="model-img1" src="./img/pixel 3a.png">
           <hr>
           <img src="./img/display.png" alt="">
@@ -56,16 +58,18 @@
           <p>Storage<br>64GB</p>
           <hr>
           <img src="./img/camera.png" alt="">
-          <p>Rear Camera<br>12.2MP(wide)<br><br>Front Camera<br>8MP(wide)</p>
+          <p>Rear Camera<br>12.2MP<small>(wide)</small><br><br>Front Camera<br>8MP<small>(wide)</small></p>
           <hr>
           <img src="./img/battery.png" alt="">
           <p>Battery Capacity<br>3000mAh</p>
           <hr>
           <img src="./img/android.png" alt="">
           <p>Operating System<br>Android 9.0<br>(upgradable to Android 12.0)</p>
+          <a class="buy" href="">Buy</a>
         </div>
         <div class="model">
           <h2>Pixel 3a XL</h2>
+          <p>From <b>$479</b></p>
           <img id="model-img2" src="./img/pixel 3a XL.png">
           <hr>
           <img src="./img/display.png" alt="">
@@ -81,16 +85,18 @@
           <p>Storage<br>64GB</p>
           <hr>
           <img src="./img/camera.png" alt="">
-          <p>Rear Camera<br>12.2MP(wide)<br><br>Front Camera<br>8MP(wide)</p>
+          <p>Rear Camera<br>12.2MP<small>(wide)</small><br><br>Front Camera<br>8MP<small>(wide)</small></p>
           <hr>
           <img src="./img/battery.png" alt="">
           <p>Battery Capacity<br>3700mAh</p>
           <hr>
           <img src="./img/android.png" alt="">
           <p>Operating System<br>Android 9.0<br>(upgradable to Android 12.0)</p>
+          <a class="buy" href="">Buy</a>
         </div>
         <div class="model">
           <h2>Pixel 3</h2>
+          <p>From <b>$799</b></p>
           <img id="model-img3" src="./img/pixel 3.jpg">
           <hr>
           <img src="./img/display.png" alt="">
@@ -106,16 +112,18 @@
           <p>Storage<br>64GB/128GB</p>
           <hr>
           <img src="./img/camera.png" alt="">
-          <p>Rear Camera<br>12.2MP(wide)<br><br>Front Camera<br>8MP(wide) + 8MP(ultrawide)</p>
+          <p>Rear Camera<br>12.2MP<small>(wide)</small><br><br>Front Camera<br>8MP<small>(wide)</small> + 8MP<small>(ultrawide)</small></p>
           <hr>
           <img src="./img/battery.png" alt="">
           <p>Battery Capacity<br>2915mAh</p>
           <hr>
           <img src="./img/android.png" alt="">
           <p>Operating System<br>Android 9.0<br>(upgradable to Android 12.0)</p>
+          <a class="buy" href="">Buy</a>
         </div>
         <div class="model">
           <h2>Pixel 3XL</h2>
+          <p>From <b>$899</b></p>
           <img id="model-img4" src="./img/pixel 3 XL.png">
           <hr>
           <img src="./img/display.png" alt="">
@@ -131,14 +139,23 @@
           <p>Storage<br>64GB/128GB</p>
           <hr>
           <img src="./img/camera.png" alt="">
-          <p>Rear Camera<br>12.2MP(wide)<br><br>Front Camera<br>8MP(wide) + 8MP(ultrawide)</p>
+          <p>Rear Camera<br>12.2MP<small>(wide)</small><br><br>Front Camera<br>8MP<small>(wide)</small> + 8MP<small>(ultrawide)</small></p>
           <hr>
           <img src="./img/battery.png" alt="">
           <p>Battery Capacity<br>3430mAh</p>
           <hr>
           <img src="./img/android.png" alt="">
           <p>Operating System<br>Android 9.0<br>(upgradable to Android 12.0)</p>
+          <a class="buy" href="">Buy</a>
         </div>
+      </div>
+      <div id="email-sub">
+        <img src="img/google.png" alt="">
+        <p>Keep me updated about devices, news, tips, and offers from the Google Store.</p>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+          <input id="email" type="email" name="email" placeholder="Enter your Email here..." required>
+          <input id="submit" type="submit" name="submit" value="Subscribe">
+        </form>
       </div>
     </main>
     <footer>
