--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1>Pixel 3</h1>
         </div>
         <ul id="nav-bar">
-          <li><a class="nav-link" href="#overview">Overview</a></li> <!-- add local links -->
+          <li><a class="nav-link" href="#overview">Overview</a></li>
           <li><a class="nav-link" href="#features">Features</a></li>
           <li><a class="nav-link" href="#pricing">Pricing</a></li>
         </ul>
@@ -36,9 +36,8 @@
         <p>Fresh new colors.</p>
         </div>
       <div id="features">
+        <img id="features-img" src="./img/features.png" alt="pixel 3 rear camera">
       </div>
-        <img id="features-img" src="./img/pixel 3 rear.jpg" alt="pixel 3 rear camera">
-      
       <div id="pricing">
         <div class="model">
           <h2>Pixel 3a</h2>
