--- a/index.html
+++ b/index.html
@@ -158,7 +158,10 @@
       </div>
     </main>
     <footer>
-      
+      <ul id="socials">
+        <li><a href="https://github.com/iyy0v"><img class="social" src="./img/github.png" alt="Github"></a></li>
+        <li><a href="https://www.linkedin.com/in/ayoubnaitmihoub/"><img class="social" src="./img/linkedin.svg" alt="LinkedIn"></a></li>
+      </ul>
     </footer>
   </body>
 </html>
